# game-programming-patterns

./: CMakeLists.txt  LICENSE  README.md
command-pattern/: CMakeLists.txt
command-pattern/header/: Command.h  CommandHandler.h  GameActor.h  GameUnit.h  InputHandler.h  JumpCommand.h  JumpingGameActor.h  MoveUnitCommand.h  VoidCommand.h
command-pattern/src/: CommandHandler.cpp  InputHandler.cpp  JumpCommand.cpp  JumpingGameActor.cpp  MoveUnitCommand.cpp
command-pattern/tests/: CommandHandlerTest.cpp  InputHandlerTest.cpp  JumpCommandTest.cpp  MoveUnitCommandTest.cpp
flyweight-pattern/: CMakeLists.txt
flyweight-pattern/header/: Terrain.h  World.h
flyweight-pattern/tests/: TerrainTest.cpp  WorldTest.cpp
observer-pattern/: CMakeLists.txt
observer-pattern/header/: Achievements.h  Entity.h  Event.h  Observer.h  Subject.h
observer-pattern/src/: Achievements.cpp  Subject.cpp
observer-pattern/tests/: AchievementsTest.cpp  SubjectTest.cpp
